pub/eks/argoingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:589634832240:certificate/640910ed-71a0-40e6-b43f-5548ee26a438
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  finalizers:
  - ingress.k8s.aws/resources
  labels:
    app: velog-test
    tier: backend
  name: argocd-ingress # 인그레스 이름 정하기
  namespace: argo    # 설치할 네임스페이스
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argo-server # 연결할 서비스 (이부분은 고정)
            port:
              number: 2746 # (이부분도 고정)
        path: /*
        pathType: ImplementationSpecific
